--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.0",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-password": "^0.2.2"
