--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
