--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.0.8",
+    "react-top-loading-bar": "^2.3.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-password": "^0.2.2"
