--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.0.8",
     "react-top-loading-bar": "^2.3.1",
