--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "framer-motion": "^7.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pusher-js": "^7.4.0",
