--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_ENV= "localhost"
-REACT_APP_API_URL= "https://test.alizs10.ir"
+REACT_APP_API_URL= "http://localhost:8000"
 REACT_APP_PUSHER_APP_KEY= "6180be4ffde5ad466545"
